integrated client credentials flow to retrieve access token and authenticate client to make requests to API

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
             <h3>Uncover the world of classical music.</h3>
         </div>
         <div class = "container" id="test2">
-            <button type = "button" class = "ButtonEnter">
+            <button type = "button" class = "ButtonEnter" onclick="authenticate()">
                 start
             </button>
         </div>
     </div>
+    <script src="bundle.js"></script>
 </body>
-</html>
+</html>`
