created display ui for tracks

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h3>Uncover the world of classical music.</h3>
         </div>
         <div class = "container" id="test2">
-            <button type = "button" class = "ButtonEnter" onclick="authenticate()">
+            <button type = "button" class = "ButtonEnter" onclick="window.location.href='stage.html'">
                 start
             </button>
         </div>
