implemented functions to select initial matchups and randomly select a piece from era in a matchup

--- a/stage.html
+++ b/stage.html
@@ -10,6 +10,10 @@
     <div class = 'stage'>
         <div class = 'sides' id ='left' onclick="leftClick()">
             <div class ='left'>
+                <img src="https://m.media-amazon.com/images/I/917TLH5R2KL._UF1000,1000_QL80_.jpg" alt="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRb6ZLTUYD1PLuXal9P8O8fPyjR6TBH0j5_ToYK3j3LUz_mzZx4LkNMaNWJBjeDFI-9Urc&usqp=CAU" width = 260' height = '260' id="leftCover">
+                <h1 class="trackTitle" id="leftTitle">Test</h1>
+                <h3 class="description" id="leftDescription">Performer, Composer</h1>
+                <audio src="" controls id="leftPreview"></audio>
                 <button type="button" class="container" onclick="leftBtn()">
                     <div class = "spotifyBtn">
                         <img src="/images/spotifyicon.png" alt="https://scaler.com/topics/images/creating-image-button-in-html.webp" class="img">
@@ -18,14 +22,14 @@
                         Open in Spotify
                     </div>
                 </button>
-                <img src="https://m.media-amazon.com/images/I/917TLH5R2KL._UF1000,1000_QL80_.jpg" alt="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRb6ZLTUYD1PLuXal9P8O8fPyjR6TBH0j5_ToYK3j3LUz_mzZx4LkNMaNWJBjeDFI-9Urc&usqp=CAU" width = 260' height = '260'>
-                <h1 class="trackTitle">Test</h1>
-                <h3 class="description">Interperter, Composer</h1>
-                <audio src="" controls></audio>
             </div>
         </div>
         <div class = 'sides' id ='right' onclick="rightClick()">
             <div class ='right'>
+                <img src="https://m.media-amazon.com/images/I/917TLH5R2KL._UF1000,1000_QL80_.jpg" alt="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRb6ZLTUYD1PLuXal9P8O8fPyjR6TBH0j5_ToYK3j3LUz_mzZx4LkNMaNWJBjeDFI-9Urc&usqp=CAU" width = '260' height = '260' id="rightCover">
+                <h1 class="trackTitle" id="rightTitle">Test</h1>
+                <h3 class="description" id="rightDescription">Performer, Composer</h1>
+                <audio src="" controls id="rightPreview"></audio>
                 <button type="button" class="container" onclick="rightBtn()">
                     <div class = "spotifyBtn">
                         <img src="/images/spotifyicon.png" alt="https://scaler.com/topics/images/creating-image-button-in-html.webp" class="img">
@@ -34,10 +38,6 @@
                         Open in Spotify
                     </div>
                 </button>
-                <img src="https://m.media-amazon.com/images/I/917TLH5R2KL._UF1000,1000_QL80_.jpg" alt="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRb6ZLTUYD1PLuXal9P8O8fPyjR6TBH0j5_ToYK3j3LUz_mzZx4LkNMaNWJBjeDFI-9Urc&usqp=CAU" width = '260' height = '260'>
-                <h1 class="trackTitle">Test</h1>
-                <h3 class="description">Interpreter, Composer</h1>
-                    <audio src="" controls></audio>
             </div>
         </div>
     </div>
