--- a/results.html
+++ b/results.html
@@ -12,17 +12,17 @@
     </div>
     <div class = 'info'>
         <div class = "container" id = "results">
-            <h2>your top eras are...</h2>
-            <h2 id="first"></h2>
+            <h2>top eras</h2>
+            <h3 id="first"></h3>
             <h5 id="second"></h5>
             <h5 id="third"></h5>
             <h5 id="fourth"></h5>
         </div>
         <div class = 'container' id = 'recommendedComposers'>
             <h2>recommended <br> composers</h2>
-            <h3>test</h3>
-            <h3>test</h3>
-            <h3>test</h3>
+            <h3 id="composerOne">test</h3>
+            <h3 id="composerTwo">test</h3>
+            <h3 id="composerThree">test</h3>
         </div>
     </div>
     <script src="bundle.js"></script>
