testing fixes to github pages not loading assets

--- a/stage.html
+++ b/stage.html
@@ -16,7 +16,7 @@
                 <audio src="" controls id="leftPreview"></audio>
                 <button type="button" class="container" onclick="leftBtn()">
                     <div class = "spotifyBtn">
-                        <img src="/images/spotifyicon.png" alt="https://scaler.com/topics/images/creating-image-button-in-html.webp" class="img">
+                        <img src="images/spotifyicon.png" alt="" class="img">
                     </div>
                     <div class="spotifyText">
                         Open in Spotify
@@ -32,7 +32,7 @@
                 <audio src="" controls id="rightPreview"></audio>
                 <button type="button" class="container" onclick="rightBtn()">
                     <div class = "spotifyBtn">
-                        <img src="/images/spotifyicon.png" alt="https://scaler.com/topics/images/creating-image-button-in-html.webp" class="img">
+                        <img src="images/spotifyicon.png" alt="" class="img">
                     </div>
                     <div class="spotifyText">
                         Open in Spotify
