remove placeholder images & text from stage page

--- a/stage.html
+++ b/stage.html
@@ -10,8 +10,8 @@
     <div class = 'stage'>
         <div class = 'sides' id ='left' onclick="leftClick()">
             <div class ='left'>
-                <img src="https://m.media-amazon.com/images/I/917TLH5R2KL._UF1000,1000_QL80_.jpg" alt="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRb6ZLTUYD1PLuXal9P8O8fPyjR6TBH0j5_ToYK3j3LUz_mzZx4LkNMaNWJBjeDFI-9Urc&usqp=CAU" width = 260' height = '260' id="leftCover">
-                <h1 class="trackTitle" id="leftTitle">Test</h1>
+                <img src="" alt="" width = 260' height = '260' id="leftCover">
+                <h1 class="trackTitle" id="leftTitle"></h1>
                 <h3 class="description" id="leftDescription">Performer, Composer</h1>
                 <audio src="" controls id="leftPreview"></audio>
                 <button type="button" class="container" onclick="leftBtn()">
@@ -26,8 +26,8 @@
         </div>
         <div class = 'sides' id ='right' onclick="rightClick()">
             <div class ='right'>
-                <img src="https://m.media-amazon.com/images/I/917TLH5R2KL._UF1000,1000_QL80_.jpg" alt="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRb6ZLTUYD1PLuXal9P8O8fPyjR6TBH0j5_ToYK3j3LUz_mzZx4LkNMaNWJBjeDFI-9Urc&usqp=CAU" width = '260' height = '260' id="rightCover">
-                <h1 class="trackTitle" id="rightTitle">Test</h1>
+                <img src="" alt="" width = '260' height = '260' id="rightCover">
+                <h1 class="trackTitle" id="rightTitle"></h1>
                 <h3 class="description" id="rightDescription">Performer, Composer</h1>
                 <audio src="" controls id="rightPreview"></audio>
                 <button type="button" class="container" onclick="rightBtn()">
