implemented tracker to display current round

--- a/stage.html
+++ b/stage.html
@@ -25,6 +25,9 @@
             </div>
         </div>
         <div class = 'sides' id ='right' onclick="rightClick()">
+            <div id="roundTracker">
+                1/10
+            </div>
             <div class ='right'>
                 <img src="" alt="" width = '260' height = '260' class="albumCover" id="rightCover">
                 <h1 class="trackTitle" id="rightTitle"></h1>
