--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <h1 id="title">opus</h1>
         </div>
         <div class = "container" id="description">
-            <h3>Uncover the world of classical music.</h3>
+            <h3>Elo-based classical piano recommender</h3>
         </div>
         <div class = "container" id="test2">
             <button type = "button" class = "ButtonEnter" onclick="window.location.href='stage.html'">
